[project]
name = "vhm-common-utils"
version = "0.1.0"
description = "Shared Python utilities and data models for the Virtual Human Memory project."
requires-python = ">=3.12.0,<3.13.0"
dependencies = [
    "pydantic>=2.6.1",
    "pydantic-settings>=2.0.0",
    "numpy>=1.26.4",
    "requests>=2.32.5",
    "litellm>=1.15.0"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.optional-dependencies]
test = [
    "pytest"
]
